syntax = "proto3";

package environmental;

// The service definition
service EnvManagement {
    // Client-side RPC to switch on lights in response to natural light data
    rpc streetLights (stream LightData) returns (LightIlluminate) {}
    // Unary RPC to request real-time water quality data 
    rpc waterData (requestWaterData) returns (responseWaterData) {}
}

// Client-5: Client-side gRPC streaming of natural light data and switching on street lights

// Message to send light levels data
message LightData {
int64 timeStamp = 1; // Time in UTC
int64 sensorID = 2; // id of the light sensor
int64 lightAmount = 3; // amount of light per unit area
}
 
// Message to respond with street light illumination
message LightIlluminate {
string message = 1; // message that the street lights have been switched on
}

// Client-6: Water Quality Spot Checks Unary rpc connection

message requestWaterData {
int64 treatPlantID = 1; // id of the Water Treatment Plant
string opName = 2;
}

message responseWaterData {
string timeStamp = 1; // Date and Time of reading
int64 treatPlantID = 2; // id of the Water Treatment Plant
int64 result = 3;
string message = 4;
string opName = 5;
}